<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/tip_calc_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/billAmountTag_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="95dp"
        android:text="@string/billAmountTag_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percentTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="39dp"
        android:text="@string/percentTag_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billAmountTag_label" />

    <TextView
        android:id="@+id/totalTipTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/totalTipTag_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentTag" />

    <TextView
        android:id="@+id/tipPercentOutputTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@+id/percentTag"
        app:layout_constraintTop_toBottomOf="@+id/subTotalTextInput" />

    <TextView
        android:id="@+id/billTotalOutputTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="233dp"
        android:text="@string/billTotalOutputTag_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/billTotalTag"
        app:layout_constraintTop_toBottomOf="@+id/tipTotalOutputTag" />

    <TextView
        android:id="@+id/billTotalTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="33dp"
        android:text="@string/billTotalTag_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTipTag" />

    <TextView
        android:id="@+id/tipTotalOutputTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="233dp"
        android:text="@string/tipTotalOutputTag_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalTipTag"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentOutputTag" />

    <EditText
        android:id="@+id/subTotalTextInput"
        android:layout_width="229dp"
        android:layout_height="39dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="84dp"
        android:hint="@string/subTotalTextInput"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:selectAllOnFocus="false"
        app:layout_constraintStart_toEndOf="@+id/billAmountTag_label"
        app:layout_constraintTop_toTopOf="parent" >

        <requestFocus />

    </EditText>

    <Button
        android:id="@+id/lowerPercentButton"
        android:layout_width="79dp"
        android:layout_height="41dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="19dp"
        android:onClick="percentButtonEventHandler"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/raisePercentButton"
        app:layout_constraintTop_toBottomOf="@+id/subTotalTextInput" />

    <Button
        android:id="@+id/raisePercentButton"
        android:layout_width="79dp"
        android:layout_height="41dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="19dp"
        android:onClick="percentButtonEventHandler"
        android:text="+"
        app:layout_constraintStart_toEndOf="@+id/tipPercentOutputTag"
        app:layout_constraintTop_toBottomOf="@+id/subTotalTextInput" />

</androidx.constraintlayout.widget.ConstraintLayout>